[metadata]
name = compact_interval_set
version = 0.9.1
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Package for dealing with interval operations
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = interval range set overlap
url = https://github.com/tgree/compact_interval_set
license = LGPLv2
license_file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)

[options]
python_requires = >=3.0
packages = compact_interval_set
